--- a/.github/workflows/endorlabs.yml
+++ b/.github/workflows/endorlabs.yml
@@ -33,8 +33,8 @@ jobs:
         - name: Setup Java
           uses: actions/setup-java@v4
           with:
-            distribution: microsoft
-            java-version: "8"
+            distribution: "temurin"
+            java-version: "17"
             cache: maven
             cache-dependency-path: pom.xml
 
