--- a/.github/workflows/endorlabs.yml
+++ b/.github/workflows/endorlabs.yml
@@ -43,7 +43,7 @@ jobs:
           with:
             maven-version: 3.9.4
         - name: Compile Package
-          run: mvn -B clean package
+          run: mvn clean install
             
         - name: Endor Labs Workflow Dispatch
           if: ${{ github.event_name == 'workflow_dispatch' }}
