--- a/.github/workflows/endorlabs.yml
+++ b/.github/workflows/endorlabs.yml
@@ -33,7 +33,7 @@ jobs:
             distribution: "temurin"
             java-version: "17"
             cache: maven
-            cache-dependency-path: pom.xml
+            cache-dependency-path: "pom.xml"
 
         - name: Setup Maven
           uses: stCarolas/setup-maven@v4.5
