--- a/.github/workflows/endorlabs.yml
+++ b/.github/workflows/endorlabs.yml
@@ -27,19 +27,21 @@ jobs:
             echo "::add-mask::$NAMESPACE" 
             echo NAMESPACE=$NAMESPACE >> $GITHUB_ENV
         
+        - name: Checkout Repository
+          uses: actions/checkout@v3
+          
         - name: Setup Java
           uses: actions/setup-java@v4
           with:
             distribution: "temurin"
             java-version: "17"
             cache: maven
-            cache-dependency-path: "pom.xml"
+            cache-dependency-path: pom.xml
 
-        - name: Setup Maven
+        - name: Set up Maven
           uses: stCarolas/setup-maven@v4.5
           with:
             maven-version: 3.9.4
-
         - name: Compile Package
           run: mvn clean install
             
